# Arduino-Inseparates

./: LICENSE  README.md  library.properties
Example1_SendIR/: Example1_SendIR.ino
Example2_MultiReceiver/: Example2_MultiReceiver.ino
Example3_SendReceive/: Example3_SendReceive.ino
Example4_DualFullDuplexSoftUART/: Example4_DualFullDuplexSoftUART.ino
Example5_ReceiveRaw/: Example5_ReceiveRaw.ino
docs/: debugging.md  protocols.md
examples/Example10_IRremote_RC5Hairpin/: Example10_IRremote_RC5Hairpin.ino
examples/Example11_IRremoteESP8266_DualFrequency/: Example11_IRremoteESP8266_DualFrequency.ino
examples/Example12_IRMP_TechnicsSystemControl/: Example12_IRMP_TechnicsSystemControl.ino
examples/Example1_SendIR/: Example1_SendIR.ino
examples/Example2_MultiReceiver/: Example2_MultiReceiver.ino
examples/Example3_SendReceive/: Example3_SendReceive.ino
examples/Example4_DualFullDuplexSoftUART/: Example4_DualFullDuplexSoftUART.ino
examples/Example5_ReceiveRaw/: Example5_ReceiveRaw.ino
examples/Example6_Collision/: Example6_Collision.ino
examples/Example7_CodeTester/: Example7_CodeTester.ino
examples/Example8_DatalinkDisplay/: Example8_DatalinkDisplay.ino
src/: DebugUtils.cpp  DebugUtils.h  FastTime.h  Inseparates.cpp  Inseparates.h  PlatformTimers.h  ProtocolBeo36.h  ProtocolDatalink80.h  ProtocolDatalink86.h  ProtocolESI.h  ProtocolNEC.h  ProtocolRC5.h  ProtocolSIRC.h  ProtocolTechnicsSC.h  ProtocolUART.h  ProtocolUtils.h
test/: CMakeLists.txt  DebugIR.cpp  DebugSystem.cpp  DebugUART.cpp  Dummies.cpp  Dummies.h  TestBeo36.cpp  TestDatalink.cpp  TestESI.cpp  TestNEC.cpp  TestRC5.cpp  TestSIRC.cpp  TestTechnicsSC.cpp  TestUART.cpp  run_tests.sh
(+30 files in other folders)
